--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_angular_udemy?us
 spring.datasource.username=chipo
 spring.datasource.password=monde
 #spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto:create-drop
+#spring.jpa.hibernate.ddl-auto:update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
