--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_angular_udemy?useSSL=false&serverTimezone=UTC
-spring.datasource.username=chipo
-spring.datasource.password=monde
-#spring.jpa.generate-ddl=false
-#spring.jpa.hibernate.ddl-auto:update
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
